# mentorai-engineering-assistant

./: .env  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
agents/: agent.py  tools.py
data/: api_design.txt  coding_standards.txt  database_design.txt  docker_basics.txt  git_workflow.txt  kubernetes_basics.txt  microservices.txt  onboarding_guide.txt  security_practices.txt  system_architecture.txt
ingestion/: ingest_data.py
prompts/: mentor_prompt.txt
rag/: rag_chain.py  vector_store.py
vectorstore/: index.faiss  index.pkl
